--- a/src/MauiTemplatesCLI/MauiAppX/Resources/Styles.xaml
+++ b/src/MauiTemplatesCLI/MauiAppX/Resources/Styles.xaml
@@ -1,7 +1,12 @@
 ﻿<?xml version="1.0" encoding="UTF-8" ?>
 <?xaml-comp compile="true" ?>
-<ResourceDictionary xmlns="http://schemas.microsoft.com/dotnet/2021/maui" 
-                    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
+<ResourceDictionary
+    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:d="http://schemas.microsoft.com/dotnet/2021/maui/design"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:local="clr-namespace:MauiApp._1"
+    mc:Ignorable="d">
 
     <!-- Update the FontFamily to set it across all Controls styles -->
     <x:String x:Key="AppFont">OpenSansRegular</x:String>
