--- a/src/MauiTemplatesCLI/MauiAppX/Views/NewEventPage.xaml
+++ b/src/MauiTemplatesCLI/MauiAppX/Views/NewEventPage.xaml
@@ -4,6 +4,8 @@
     x:Class="MauiApp._1.Views.NewEventPage"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:d="http://schemas.microsoft.com/dotnet/2021/maui/design"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:ctrl="clr-namespace:MauiApp._1.Controls"
     xmlns:local="clr-namespace:MauiApp._1"
     xmlns:sys="clr-namespace:System;assembly=mscorlib"
@@ -12,34 +14,42 @@
                          Default={StaticResource DefaultPadding}}"
     Shell.PresentationMode="ModalAnimated"
     Title="{Binding Title}"
-    x:DataType="vm:NewEventViewModel">
+    x:DataType="vm:NewEventViewModel"
+    mc:Ignorable="d">
     <ContentPage.Content>
         <StackLayout>
-            <Entry Text="{Binding Event.Name}"
-                   Placeholder="Event name"
-                   MaxLength="100" />
-            <Entry Text="{Binding Event.Location}"
-                   Placeholder="Location"
-                   MaxLength="100" />
-            <ctrl:DateTimePicker Title="Start:"
-                                  Date="{Binding Event.StartsAt.Date}"
-                                  MinimumDate="{x:Static sys:DateTime.Now}"
-                                  Time="{Binding Event.StartsAt.TimeOfDay}" />
-            <ctrl:DateTimePicker Title="End:"
-                                  Date="{Binding Event.EndsAt.Date}"
-                                  MinimumDate="{x:Static sys:DateTime.Now}"
-                                  Time="{Binding Event.EndsAt.TimeOfDay}" />
-            <Editor Text="{Binding Event.Notes}"
-                    HeightRequest="100"
-                    Placeholder="Notes"
-                    MaxLength="500" />
+            <Entry
+                Text="{Binding Event.Name}"
+                Placeholder="Event name"
+                MaxLength="100" />
+            <Entry
+                Text="{Binding Event.Location}"
+                Placeholder="Location"
+                MaxLength="100" />
+            <ctrl:DateTimePicker
+                Title="Start:"
+                Date="{Binding Event.StartsAt.Date}"
+                MinimumDate="{x:Static sys:DateTime.Now}"
+                Time="{Binding Event.StartsAt.TimeOfDay}" />
+            <ctrl:DateTimePicker
+                Title="End:"
+                Date="{Binding Event.EndsAt.Date}"
+                MinimumDate="{x:Static sys:DateTime.Now}"
+                Time="{Binding Event.EndsAt.TimeOfDay}" />
+            <Editor
+                Text="{Binding Event.Notes}"
+                HeightRequest="100"
+                Placeholder="Notes"
+                MaxLength="500" />
             <HorizontalStackLayout HorizontalOptions="Center">
-                <Button Command="{Binding SaveCommand}"
-                        Style="{StaticResource PrimaryAction}"
-                        Text="Save" />
-                <Button Command="{Binding CancelCommand}"
-                        Style="{StaticResource Action}"
-                        Text="Cancel" />
+                <Button
+                    Command="{Binding SaveCommand}"
+                    Style="{StaticResource PrimaryAction}"
+                    Text="Save" />
+                <Button
+                    Command="{Binding CancelCommand}"
+                    Style="{StaticResource Action}"
+                    Text="Cancel" />
             </HorizontalStackLayout>
         </StackLayout>
     </ContentPage.Content>
@@ -49,6 +59,8 @@
     x:Class="MauiApp._1.Views.NewEventPage"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:d="http://schemas.microsoft.com/dotnet/2021/maui/design"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:ctrl="clr-namespace:MauiApp._1.Controls"
     xmlns:local="clr-namespace:MauiApp._1"
     xmlns:sys="clr-namespace:System;assembly=mscorlib"
@@ -56,32 +68,40 @@
     Padding="{OnPlatform iOS={StaticResource ApplePadding},
                          Default={StaticResource DefaultPadding}}"
     Shell.PresentationMode="ModalAnimated"
-    Title="New Event">
+    Title="New Event"
+    mc:Ignorable="d">
     <ContentPage.Content>
         <StackLayout>
-            <Entry Text=""
-                   Placeholder="Event name"
-                   MaxLength="100" />
-            <Entry Text=""
-                   Placeholder="Location"
-                   MaxLength="100" />
-            <ctrl:DateTimePicker x:Name="start"
-                                  MinimumDate="{x:Static sys:DateTime.Now}"
-                                  Title="Start:" />
-            <ctrl:DateTimePicker x:Name="end"
-                                  MinimumDate="{x:Static sys:DateTime.Now}"
-                                  Title="End:" />
-            <Editor Text=""
-                    HeightRequest="100"
-                    Placeholder="Notes"
-                    MaxLength="500" />
+            <Entry
+                Text=""
+                Placeholder="Event name"
+                MaxLength="100" />
+            <Entry
+                Text=""
+                Placeholder="Location"
+                MaxLength="100" />
+            <ctrl:DateTimePicker
+                x:Name="start"
+                MinimumDate="{x:Static sys:DateTime.Now}"
+                Title="Start:" />
+            <ctrl:DateTimePicker
+                x:Name="end"
+                MinimumDate="{x:Static sys:DateTime.Now}"
+                Title="End:" />
+            <Editor
+                Text=""
+                HeightRequest="100"
+                Placeholder="Notes"
+                MaxLength="500" />
             <HorizontalStackLayout HorizontalOptions="Center">
-                <Button Style="{StaticResource PrimaryAction}"
-                        Text="Save"
-                        Clicked="OnSave" />
-                <Button Style="{StaticResource Action}"
-                        Text="Cancel"
-                        Clicked="OnCancel" />
+                <Button
+                    Clicked="OnSave"
+                    Style="{StaticResource PrimaryAction}"
+                    Text="Save" />
+                <Button
+                    Clicked="OnCancel"
+                    Style="{StaticResource Action}"
+                    Text="Cancel" />
             </HorizontalStackLayout>
         </StackLayout>
     </ContentPage.Content>
