--- a/src/MauiTemplatesCLI/MauiResDict/MauiResDict.1.xaml
+++ b/src/MauiTemplatesCLI/MauiResDict/MauiResDict.1.xaml
@@ -4,7 +4,10 @@
 <ResourceDictionary
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:local="clr-namespace:MyApp.Namespace">
+    xmlns:d="http://schemas.microsoft.com/dotnet/2021/maui/design"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:local="clr-namespace:MyApp.Namespace"
+    mc:Ignorable="d">
     <!-- Define your resources here -->
 </ResourceDictionary>
 <!--#else-->
@@ -12,7 +15,10 @@
     x:Class="MyApp.Namespace.MauiResDict__1"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:local="clr-namespace:MyApp.Namespace">
+    xmlns:d="http://schemas.microsoft.com/dotnet/2021/maui/design"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:local="clr-namespace:MyApp.Namespace"
+    mc:Ignorable="d">
     <!-- Define your resources here -->
 </ResourceDictionary>
 <!--#endif-->
