--- a/src/MauiTemplatesCLI/MauiShell/MauiShell.1.xaml
+++ b/src/MauiTemplatesCLI/MauiShell/MauiShell.1.xaml
@@ -3,7 +3,10 @@
     x:Class="MyApp.Namespace.MauiShell__1"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:local="clr-namespace:MyApp.Namespace">
+    xmlns:d="http://schemas.microsoft.com/dotnet/2021/maui/design"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:local="clr-namespace:MyApp.Namespace"
+    mc:Ignorable="d">
     <!--
         The overall app visual hierarchy is defined here, along with navigation.
         Ensure atleast a Flyout item or a TabBar is defined for Shell to work
@@ -25,10 +28,14 @@
     <!--#endif-->
     <!--
     <FlyoutItem Title="Home">
-        <ShellContent ContentTemplate="{DataTemplate local:HomePage}" Route="home" />
+        <ShellContent
+            ContentTemplate="{DataTemplate local:HomePage}"
+            Route="home" />
     </FlyoutItem>
     <FlyoutItem Title="Search">
-        <ShellContent ContentTemplate="{DataTemplate local:SearchPage}" Route="search" />
+        <ShellContent
+            ContentTemplate="{DataTemplate local:SearchPage}"
+            Route="search" />
     </FlyoutItem>
     -->
     <!--
@@ -41,7 +48,9 @@
     -->
     <!--#endif-->
     <!--
-    <MenuItem Clicked="OnMenuItemClicked" Text="Logout" />
+    <MenuItem
+        Clicked="OnMenuItemClicked"
+        Text="Logout" />
     -->
     <!--
         TabBar lets you define content that won't show up in a Flyout menu. When this content is active
@@ -58,7 +67,9 @@
     <!--#endif-->
     <!--
     <TabBar>
-        <ShellContent ContentTemplate="{DataTemplate local:LoginPage}" Route="login" />
+        <ShellContent
+            ContentTemplate="{DataTemplate local:LoginPage}"
+            Route="login" />
     </TabBar>
     -->
     <!-- Optional Templates
