--- a/src/ItemTemplates/MauiPageWithViewModel/Views/MauiPage.xaml
+++ b/src/ItemTemplates/MauiPageWithViewModel/Views/MauiPage.xaml
@@ -1,19 +1,24 @@
 <?xml version="1.0" encoding="UTF-8" ?>
-<ContentPage x:Class="$rootnamespace$.$safeitemname$"
-             xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:vm="clr-namespace:$basenamespace$.ViewModels"
-             xmlns:local="clr-namespace:$rootnamespace$"
-             x:DataType="vm:$fileinputname$ViewModel">
+<ContentPage
+    x:Class="$rootnamespace$.$safeitemname$"
+    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:d="http://schemas.microsoft.com/dotnet/2021/maui/design"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:vm="clr-namespace:$basenamespace$.ViewModels"
+    xmlns:local="clr-namespace:$rootnamespace$"
+    x:DataType="vm:$fileinputname$ViewModel"
+    mc:Ignorable="d">
     <ContentPage.BindingContext>
         <vm:$fileinputname$ViewModel />
     </ContentPage.BindingContext>
     <ContentPage.Content>
         <StackLayout>
-            <Label Text="Welcome to .NET MAUI!!!"
-                   HorizontalOptions="Center"
-                   TextColor="Purple"
-                   VerticalOptions="Center"/>
+            <Label
+                HorizontalOptions="Center"
+                Text="Welcome to .NET MAUI!!!"
+                TextColor="Purple"
+                VerticalOptions="Center"/>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
