--- a/src/ItemTemplates/MauiViewXaml/MauiView.xaml
+++ b/src/ItemTemplates/MauiViewXaml/MauiView.xaml
@@ -1,14 +1,19 @@
 <?xml version="1.0" encoding="UTF-8" ?>
-<ContentView x:Class="$rootnamespace$.$safeitemname$"
-             xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:local="clr-namespace:$rootnamespace$">
+<ContentView
+    x:Class="$rootnamespace$.$safeitemname$"
+    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:d="http://schemas.microsoft.com/dotnet/2021/maui/design"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:local="clr-namespace:$rootnamespace$"
+    mc:Ignorable="d">
     <ContentView.Content>
         <Grid>
-            <Label Text="Welcome to .NET MAUI!!!"
-                   HorizontalOptions="Center"
-                   TextColor="Purple"
-                   VerticalOptions="Center"/>
+            <Label
+                HorizontalOptions="Center"
+                Text="Welcome to .NET MAUI!!!"
+                TextColor="Purple"
+                VerticalOptions="Center"/>
         </Grid>
     </ContentView.Content>
 </ContentView>
